--- a/assets/html/introduction.html
+++ b/assets/html/introduction.html
@@ -4,34 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Please Introduce Yourself!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 0;
-            background-color: #000000;
-            color: #ffffff;
-        }
-        h1 {
-            color: #2f89ea;
-        }
-        ol {
-            padding-left: 20px;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="/assets/html/styles.css">
 </head>
 <body>
     <h1>Please Introduce Yourself!</h1>
     <p>Hello, everyone! My name is Taylor, and I am going to be your TA this upcoming quarter for MATH011/CS011.</p>
     <p>I hope your winter break is going well so far! I know we've still got a few days before the class starts officially, but I would greatly appreciate it if you could introduce yourself in this discussion thread. It's certainly optional, but I would really enjoy getting to know you all a bit (and it helps me remember your names). I would like to know:</p>
     <ol>
-        <li>The name you prefer to go by</li>
+        <li>The name you prefer to go by (if you would like to include pronounciation that would be very helpful!)</li>
         <li>Your year and major</li>
-        <li>Programming experience (if you have any) and the math classes you have taken here</li>
+        <li>Programming experience (if you have any) including languages and the math classes you have taken here at UCR</li>
         <li>Any hobbies you would feel comfortable sharing</li>
         <li>Optional: Anything you'd like to share (Some ideas: something fun you did over the break, a favorite music artist/album/movie, an appropriate meme, a funny story, etc.).</li>
     </ol>
