--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Welcome to MATH011/CS011!</h1>
     <p>Hello, everyone! My name is Taylor, and I am going to be your TA this upcoming quarter for MATH011/CS011.</p>
+    <h2>
+        Please Introduce Yourself
+    </h2>
+    <p>
+        Please introduce yourself in the discussion thread. It helps me remember your names and get to know you all a bit.
+    </p>
     <h2>Office Hours</h2>
     <p>Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours.</p>
     <h3>When2Meet Links</h3>
