--- a/assets/html/introduction.html
+++ b/assets/html/introduction.html
@@ -18,7 +18,7 @@
         <li>Optional: Anything you'd like to share (Some ideas: something fun you did over the break, a favorite music artist/album/movie, an appropriate meme, a funny story, etc.).</li>
     </ol>
     <p>
-        I'll start! I am a second-year Math PhD student, and I majored in mathematics during my undergrad. I like to play music and have been teaching myself guitar and python. Last year I used linear algebra to write a python program to detect the page color of my pdfs after a professor broke the department copier trying to print my homework.
+        I'll start! I go by Taylor, and I am a second-year Math PhD student, and I majored in mathematics during my undergrad. I like to play music and have been teaching myself guitar and python. Last year I used linear algebra to write a python program to detect the page color of my pdfs after a professor broke the department copier trying to print my homework.
     </p>
 </body>
 </html>
