--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -33,5 +33,11 @@
     <p>
         TBD: I will let you know if/when we have a discord server.
     </p>
+    <h3>
+        Grades
+    </h3>
+    <p>
+        TBD: This will depend on your professor.
+    </p>
 </body>
 </html>
