--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -10,6 +10,12 @@
     <h1>Welcome to MATH011/CS011!</h1>
     <p>Hello, everyone! My name is Taylor, and I am going to be your TA this upcoming quarter for MATH011/CS011.</p>
     <h2>
+        Contact Information
+    </h2>
+    <p>
+        Email: taylor.fisher@email.ucr.edu
+    </p>
+    <h2>
         Please Introduce Yourself
     </h2>
     <p>
@@ -29,15 +35,22 @@
     <p>
         (Technically, I have to keep these separate. But you are free to join office hours for either discussion section if you are okay with being a lower priority for questions.)
     </p>
-    <h3>Discord</h3>
+    <h2>Discord</h2>
     <p>
         TBD: I will let you know if/when we have a discord server.
     </p>
-    <h3>
+    <h2>
         Grades
-    </h3>
+    </h2>
     <p>
         TBD: This will depend on your professor.
     </p>
+    <h2>
+        Your TA
+    </h2>
+    <p>
+        You can call me Taylor, TAylor, or anything (especially if it's funny).
+    </p>
+    <img src="/assets/img/yourta.jpg" alt="TAylor">
 </body>
 </html>
