--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -15,6 +15,17 @@
     <p>
         Email: taylor.fisher@email.ucr.edu
     </p>
+    <p>
+        Note: I am a TA for four sections of this class (with two different professors): Two sections for one professor on Tuesday and two for a different professor on Wednesday. Please include the course number (MATH011) and either your section number or the day/time of your discussion in the subject of your email. This really helps me keep track of everything! If you don't, then I might have to search through all four sections to find you in Canvas.
+    </p>
+    <p>
+        Ex. 
+    </p>
+    <ul>
+        <li>Subject: "MATH011 T 11am: Question about..."</li>
+        <li>Subject: "MATH011 W 5pm: I need you to..."</li>
+        <li>Subject: "MATH011 Sec13: Will there be..."</li>
+    </ul>
     <h2>
         Please Introduce Yourself
     </h2>
@@ -51,6 +62,6 @@
     <p>
         You can call me Taylor, TAylor, or anything (especially if it's funny).
     </p>
-    <img src="/assets/img/yourta.jpg" alt="TAylor">
+    <img src="/assets/img/yourta.jpg" alt="TAylor", width="300">
 </body>
 </html>
