--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -62,6 +62,6 @@
     <p>
         You can call me Taylor, TAylor, or anything (especially if it's funny).
     </p>
-    <img src="/assets/img/yourta.jpg" alt="TAylor", width="300">
+    <img src="/assets/img/yourta.jpg" alt="TAylor" style="width: 25%;">
 </body>
 </html>
