--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -16,10 +16,7 @@
         Email: taylor.fisher@email.ucr.edu
     </p>
     <p>
-        Note: I am a TA for four sections of this class (with two different professors): Two sections for one professor on Tuesday and two for a different professor on Wednesday. Please include the course number (MATH011) and either your section number or the day/time of your discussion in the subject of your email. This really helps me keep track of everything! If you don't, then I might have to search through all four sections to find you in Canvas.
-    </p>
-    <p>
-        Ex. 
+        Note: I am a TA for four sections of this class (with two different professors): Two sections for one professor on Tuesday and two for a different professor on Wednesday. Please include the course number (MATH011) and either your section number or the day/time of your discussion in the subject of your email. This really helps me keep track of everything! If you don't, then I might have to search through all four sections to find you in Canvas. Ex. 
     </p>
     <ul>
         <li>Subject: "MATH011 T 11am: Question about..."</li>
@@ -33,7 +30,9 @@
         Please introduce yourself in the discussion thread. It helps me remember your names and get to know you all a bit.
     </p>
     <h2>Office Hours</h2>
-    <p>Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours.</p>
+    <p>
+        TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours.
+    </p>
     <h3>When2Meet Links</h3>
     <ul>
         <li>
