--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -20,7 +20,7 @@
     </p>
     <ul>
         <li>Subject: "MATH011 T 11am: Question about..."</li>
-        <li>Subject: "MATH011 W 5pm: I need you to..."</li>
+        <li>Subject: "MATH011 W 5pm: Can you..."</li>
         <li>Subject: "MATH011 Sec13: Will there be..."</li>
     </ul>
     <h2>
