--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -43,6 +43,9 @@
         </li>
     </ul>
     <p>
+        Please only fill out the when2meet for your discussion section.
+    </p>
+    <p>
         (Technically, I have to keep these separate. But you are free to join office hours for either discussion section if you are okay with being a lower priority for questions.)
     </p>
     <h2>Discord</h2>
@@ -61,6 +64,9 @@
     <p>
         You can call me Taylor, TAylor, or anything (especially if it's funny).
     </p>
-    <img src="/assets/img/yourta.jpg" alt="TAylor" style="width: 50%;">
+    <figure>
+        <img src="/assets/img/yourta.jpg" alt="Taylor" style="width: 50%;">
+        <figcaption>Me at the kids choice awards 2010</figcaption>
+    </figure>
 </body>
 </html>
