--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -52,7 +52,7 @@
         Your TA
     </h2>
     <p>
-        You can call me Taylor, TAylor, or anything (especially if it's funny).
+        You can call me Taylor or TAylor.
     </p>
     <figure>
         <img src="/assets/img/yourta.jpg" alt="Taylor" style="width: 50%;">
