--- a/assets/html/introduction.html
+++ b/assets/html/introduction.html
@@ -13,7 +13,7 @@
     <ol>
         <li>The name you prefer to go by (if you would like to include pronounciation that would be very helpful!)</li>
         <li>Your year and major</li>
-        <li>Programming experience (if you have any) including the programming languages you know and are comfortabl with. And the math classes you have taken here at UCR!</li>
+        <li>Programming experience (if you have any) including the programming languages you know and are comfortable with. And the math classes you have taken here at UCR!</li>
         <li>Any hobbies you would feel comfortable sharing</li>
         <li>Optional: Anything you'd like to share (Some ideas: something fun you did over the break, a favorite music artist/album/movie, an appropriate meme, a funny story, etc.).</li>
     </ol>
