--- a/assets/html/introduction.html
+++ b/assets/html/introduction.html
@@ -11,7 +11,7 @@
     <p>Hello, everyone! My name is Taylor, and I am going to be your TA this upcoming quarter for MATH011/CS011.</p>
     <p>I hope your winter break is going well so far! I know we've still got a few days before the class starts officially, but I would greatly appreciate it if you could introduce yourself in this discussion thread. It's certainly optional, but I would really enjoy getting to know you all a bit (and it helps me remember your names). I would like to know:</p>
     <ol>
-        <li>The name you prefer to go by (if you would like to include pronounciation that would be very helpful!)</li>
+        <li>The name you prefer to go by (if you would like to include pronunciation that would be very helpful!)</li>
         <li>Your year and major</li>
         <li>Programming experience (if you have any) including the programming languages you know and are comfortable with. And the math classes you have taken here at UCR!</li>
         <li>Any hobbies you would feel comfortable sharing</li>
