--- a/assets/html/math011tuesdaysyll.html
+++ b/assets/html/math011tuesdaysyll.html
@@ -41,7 +41,7 @@
     </p>
     <h2>Discord</h2>
     <p>
-        <a href="https://discord.gg/ZGMwhMCwHT"><strong>Discord server invite</strong></a>. Technically optional, but it serves as a sort of hub for the class. You can ask questions, get help, and chat with your classmates here.
+        <a href="https://discord.gg/ZGMwhMCwHT"><strong>Discord server invite</strong></a>. Technically optional, but it serves as a sort of hub for the class. You can ask questions, get help, and chat with your classmates here. Further, I will be posting announcements and worksheets here, so it is a good idea to join.
     </p>
     <h2>
         Please Introduce Yourself
