--- a/assets/html/math011tuesdaysyll.html
+++ b/assets/html/math011tuesdaysyll.html
@@ -60,5 +60,28 @@
         <img src="/assets/img/yourta.jpg" alt="Taylor" style="width: 50%;">
         <figcaption>Me at the kids choice awards 2010</figcaption>
     </figure>
+    <h2>
+        Warnings
+    </h2>
+        <ul>
+        <li>
+            I have dysgraphia:
+            <ul>
+                <li>I will not be offended if you cannot read my writing.</li>
+                <li>Please let me know ASAP if you cannot read something I have written.</li>
+            </ul>
+        </li>
+        <li>
+            I have ADHD:
+            <ul>
+                <li>I will forget 9/10 times if you do not spam me with reminders.</li>
+            </ul>
+        </li>
+        <li>
+            I am <i>terrible</i> with names:
+            <ul>
+                <li>I will do my best to remember your names, but I have the most students I have ever had this quarter, so I will probably fail.</li>
+            </ul>
+    </ul>
 </body>
 </html>
