--- a/assets/html/math011tuesdaysyll.html
+++ b/assets/html/math011tuesdaysyll.html
@@ -23,6 +23,12 @@
         <li>Subject: "MATH011 W 5pm: Can you..."</li>
         <li>Subject: "MATH011 Sec13: Will there be..."</li>
     </ul>
+    <h2>
+        Course Content
+    </h2>
+    <p>
+        <a href="https://drive.google.com/drive/u/2/folders/1OeNM_PerwPW__B9JEC7KxV-V2FIDyBEj"><strong>Google Drive</strong></a>
+    </p>
     <h2>Office Hours</h2>
     <p>
         TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours.
