--- a/assets/html/math011tuesdaysyll.html
+++ b/assets/html/math011tuesdaysyll.html
@@ -31,10 +31,15 @@
     </p>
     <h2>Office Hours</h2>
     <p>
-        TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours.
+        <ul>
+            <li>Tuesday: 4pm-6pm in-person Webber 1303C</li>
+            <li>Wednesday: 4pm-5pm in-person Webber 1303C</li>
+            <li>Thursday: 1pm-2pm on Zoom</li>
+        </ul>
+        <!-- TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours. -->
     </p>
-    <h3>When2Meet Links</h3>
-    <a href="https://www.when2meet.com/?28134397-mXusi"><strong>when2meet if your discussion is on TUESDAY</strong></a>
+    <!-- <h3>When2Meet Links</h3>
+    <a href="https://www.when2meet.com/?28134397-mXusi"><strong>when2meet if your discussion is on TUESDAY</strong></a> -->
     <h2>
         Grades
     </h2>
@@ -43,6 +48,10 @@
             <li>There will be a quiz every week except for weeks 1 and 10.</li>
             <li>There is a worksheet every week.</li>
             <li>You will submit your quizzes and worksheet through gradescope. PLEASE label your problems!</li>
+            <ul>
+                <li>The quiz goes on the <strong>lecture</strong> gradescope.</li>
+                <li>The worksheet goes on the <strong>discussion</strong> gradescope.</li>
+            </ul>
         </ul>
     </p>
     <h2>Discord</h2>
@@ -77,12 +86,12 @@
                 <li>Please let me know ASAP if you cannot read something I have written.</li>
             </ul>
         </li>
-        <li>
+        <!-- <li>
             I have ADHD:
             <ul>
-                <li>I will forget 9/10 times if you do not spam me with reminders.</li>
+            <li>I will forget 9/10 times if you do not spam me with reminders.</li>
             </ul>
-        </li>
+        </li> -->
         <li>
             I am <i>terrible</i> with names:
             <ul>
