--- a/assets/html/math011tuesdaysyll.html
+++ b/assets/html/math011tuesdaysyll.html
@@ -35,6 +35,7 @@
             <li>Tuesday: 4pm-6pm in-person Webber 1303C</li>
             <li>Wednesday: 4pm-5pm in-person Webber 1303C</li>
             <li>Thursday: 1pm-2pm on Zoom</li>
+        <li>Friday: 10am-11am on Zoom (<a href="https://ucr.zoom.us/my/tfish2718">Join here https://ucr.zoom.us/my/tfish2718</a>)</li>
         </ul>
         <!-- TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours. -->
     </p>
@@ -56,7 +57,7 @@
     </p>
     <h2>Discord</h2>
     <p>
-        <a href="https://discord.gg/ZGMwhMCwHT"><strong>Discord server invite</strong></a>. Technically optional, but it serves as a sort of hub for the class. You can ask questions, get help, and chat with your classmates here. Further, I will be posting announcements and worksheets here, so it is a good idea to join.
+        <a href="https://discord.gg/ZGMwhMCwHT"><strong>Discord server invite</strong></a>. Technically optional, but it serves as a sort of hub for the class. You can ask questions, get help, and chat with your classmates here. Further, I will be posting announcements here, so it is a good idea to join.
     </p>
     <h2>
         Please Introduce Yourself
