--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -23,30 +23,31 @@
         <li>Subject: "MATH011 W 5pm: Can you..."</li>
         <li>Subject: "MATH011 Sec13: Will there be..."</li>
     </ul>
+    <h2>Office Hours</h2>
+    <p>
+        <ul>
+            <li>Tuesday: 4pm-6pm in-person Webber 1303C</li>
+            <li>Wednesday: 4pm-5pm in-person Webber 1303C</li>
+            <li>Thursday: 1pm-2pm on Zoom</li>
+        <li>Friday: 10am-11am on Zoom (<a href="https://ucr.zoom.us/my/tfish2718">Join here https://ucr.zoom.us/my/tfish2718</a>)</li>
+        </ul>
+        <!-- TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours. -->
+    </p>
+    <!-- <h2>
+        Grades
+    </h2>
+    <p>
+        TBD: This will depend on your professor.
+    </p> -->
+    <h2>Discord</h2>
+    <p>
+        <a href="https://discord.gg/ZGMwhMCwHT"><strong>Discord server invite</strong></a>. Technically optional, but it serves as a sort of hub for the class. You can ask questions, get help, and chat with your classmates here. Further, I will be posting minor announcements here, so it is a good idea to join.
+    </p>
     <h2>
         Please Introduce Yourself
     </h2>
     <p>
         Please introduce yourself in the discussion thread. It helps me remember your names and get to know you all a bit.
-    </p>
-    <h2>Office Hours</h2>
-    <p>
-        TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours.
-    </p>
-    <h3>When2Meet Links</h3>
-    <ul>
-        <li>
-            <a href="https://www.when2meet.com/?28134397-mXusi"><strong>when2meet if your discussion is on TUESDAY</strong></a>
-        </li>
-        <li>
-            <a href="https://www.when2meet.com/?28134404-sABIF"><strong>when2meet if your discussion is on WEDNESDAY</strong></a>
-        </li>
-    </ul>
-    <p>
-        Please only fill out the when2meet for your discussion section.
-    </p>
-    <p>
-        (Technically, I have to keep these separate. But you are free to join office hours for either discussion section if you are okay with being a lower priority for questions.)
     </p>
     <h2>
         Your TA
@@ -58,15 +59,5 @@
         <img src="/assets/img/yourta.jpg" alt="Taylor" style="width: 50%;">
         <figcaption>Me at the kids choice awards 2010</figcaption>
     </figure>
-    <h2>
-        Grades
-    </h2>
-    <p>
-        TBD: This will depend on your professor.
-    </p>
-    <h2>Discord</h2>
-    <p>
-        TBD: I will let you know if/when we have a discord server.
-    </p>
 </body>
 </html>
