--- a/assets/html/frontpage.html
+++ b/assets/html/frontpage.html
@@ -26,10 +26,9 @@
     <h2>Office Hours</h2>
     <p>
         <ul>
+            <li>Monday: 4pm-5pm on Zoom (<a href="https://ucr.zoom.us/my/tfish2718">Join here https://ucr.zoom.us/my/tfish2718</a>)</li>
             <li>Tuesday: 4pm-6pm in-person Webber 1303C</li>
             <li>Wednesday: 4pm-5pm in-person Webber 1303C</li>
-            <li>Thursday: 1pm-2pm on Zoom</li>
-        <li>Friday: 10am-11am on Zoom (<a href="https://ucr.zoom.us/my/tfish2718">Join here https://ucr.zoom.us/my/tfish2718</a>)</li>
         </ul>
         <!-- TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours. -->
     </p>
