--- a/assets/html/math011tuesdaysyll.html
+++ b/assets/html/math011tuesdaysyll.html
@@ -34,8 +34,7 @@
         <ul>
             <li>Tuesday: 4pm-6pm in-person Webber 1303C</li>
             <li>Wednesday: 4pm-5pm in-person Webber 1303C</li>
-            <li>Thursday: 1pm-2pm on Zoom</li>
-        <li>Friday: 10am-11am on Zoom (<a href="https://ucr.zoom.us/my/tfish2718">Join here https://ucr.zoom.us/my/tfish2718</a>)</li>
+            <li>Monday: 4pm-5pm on Zoom (<a href="https://ucr.zoom.us/my/tfish2718">Join here https://ucr.zoom.us/my/tfish2718</a>)</li>
         </ul>
         <!-- TBD! Please fill out this when2meet for your discussion! I will let you know when I have decided on times for office hours. -->
     </p>
@@ -76,7 +75,7 @@
         <img src="/assets/img/yourta.jpg" alt="Taylor" style="width: 50%;">
         <figcaption>Me at the kids choice awards 2010</figcaption>
     </figure>
-    <h2>
+    <!--<h2>
         Warnings
     </h2>
         <ul>
@@ -87,17 +86,17 @@
                 <li>Please let me know ASAP if you cannot read something I have written.</li>
             </ul>
         </li>
-        <!-- <li>
+        <-- <li>
             I have ADHD:
             <ul>
             <li>I will forget 9/10 times if you do not spam me with reminders.</li>
             </ul>
-        </li> -->
+        </li> --
         <li>
             I am <i>terrible</i> with names:
             <ul>
                 <li>I will do my best to remember your names, but I have the most students I have ever had this quarter, so I will probably fail.</li>
             </ul>
-    </ul>
+    </ul> -->
 </body>
 </html>
